MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/KYCandWealthForm__c.field-meta.xml
<CustomField>
    <fullName>KYCandWealthForm__c</fullName>
    <formula>if(INCLUDES(SignedDocuments__c, &apos;KYC and Wealth Form&apos;), &apos;Signed&apos;, &apos;Unsigned&apos;)</formula>
    <label>KYC and Wealth Form</label>
    <type>Text</type>
</CustomField>