MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Last_Paid_Installment_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Paid_Installment_Number__c</fullName>
    <label>Last Paid Installment Number</label>
    <summarizedField>SalesOrderInstallments__c.MilestoneNumber__c</summarizedField>
    <summaryFilterItems>
        <field>SalesOrderInstallments__c.PaymentStatus__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>SalesOrderInstallments__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>