MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <formula>Text(Opportunity__r.LeadSource)</formula>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>