MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Legally_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Legally_Flagged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legally Flagged</label>
    <type>Checkbox</type>
</CustomField>