MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Modeofpayment__c.field-meta.xml
<CustomField>
    <fullName>Modeofpayment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mode of Payments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>