MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Mortgage_Bank__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Bank__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mortgage Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>