MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/My_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>My_Sales_Order__c</fullName>
    <formula>OR(
  AND(
    Sales_Operations_Associate__c = $User.Id,
    TEXT(Sub_Status__c) = &quot;Pending with Sales Operation&quot;
  ),
  AND(
    SalesAssociate__c = $User.Id,
    OR(
      TEXT(Sub_Status__c) = &quot;Pending with Sales.&quot;,
      TEXT(Sub_Status__c) = &quot;Pending with Sales&quot;
    )
  ),
  AND(
    Finance_Associate__c = $User.Id,
    TEXT(Sub_Status__c) = &quot;Under Finance Verification&quot;
  ),
  AND(
    Customer_Management_Associate__c = $User.Id,
    TEXT(Sub_Status__c) = &quot;Pending with CM&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Sales Order</label>
    <type>Checkbox</type>
</CustomField>