MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <formula>TEXT(Opportunity__r.Nationality__c)</formula>
    <label>Nationality</label>
    <type>Text</type>
</CustomField>