MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/NextReminder__c.field-meta.xml
<CustomField>
    <fullName>NextReminder__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Survey Date</label>
    <type>Date</type>
</CustomField>