MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/NoNeedToSendSPA__c.field-meta.xml
<CustomField>
    <fullName>NoNeedToSendSPA__c</fullName>
    <formula>Unit__r.NoNeedToSendSPA__c</formula>
    <label>NoNeedToSendSPA</label>
    <type>Checkbox</type>
</CustomField>