MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/NoOfInstallment__c.field-meta.xml
<CustomField>
    <fullName>NoOfInstallment__c</fullName>
    <label>NoOfInstallment</label>
    <summaryFilterItems>
        <field>SalesOrderInstallments__c.MilestoneNumber__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>SalesOrderInstallments__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>