MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/NotToBeShownOnRD__c.field-meta.xml
<CustomField>
    <fullName>NotToBeShownOnRD__c</fullName>
    <formula>Unit__r.NotToBeShownOnRD__c</formula>
    <label>Not To Be Shown On RD</label>
    <type>Checkbox</type>
</CustomField>