MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Number_of_bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_bedrooms__c</fullName>
    <formula>IF(ISBLANK((UnitOption__c)),( Unit__r.NumberofBedrooms__c), (UnitOption__r.NumberofBedrooms__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of bedrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>