MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Number_of_JointOwners__c.field-meta.xml
<CustomField>
    <fullName>Number_of_JointOwners__c</fullName>
    <label>Number of JointOwners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>