MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/NumberofTimesSPAVoided__c.field-meta.xml
<CustomField>
    <fullName>NumberofTimesSPAVoided__c</fullName>
    <label>Number of Times SPA Voided</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>