MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/OICIntegrationMessage__c.field-meta.xml
<CustomField>
    <fullName>OICIntegrationMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OIC Integration Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>