MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/OICNoOfRetries__c.field-meta.xml
<CustomField>
    <fullName>OICNoOfRetries__c</fullName>
    <label>OIC No of Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>