MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Old_Account__c.field-meta.xml
<CustomField>
    <fullName>Old_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders (Old Account)</relationshipLabel>
    <relationshipName>Sales_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>