MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Old_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Old_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Orders (Old Opportunity)</relationshipLabel>
    <relationshipName>Sales_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>