MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Old_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Unit_Name__c</fullName>
    <formula>Unit__r.OldName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Unit Name</label>
    <type>Text</type>
</CustomField>