MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/OracleCustAcctSiteID__c.field-meta.xml
<CustomField>
    <fullName>OracleCustAcctSiteID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OracleCustAcctSiteID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>