MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/OraclePartySiteID__c.field-meta.xml
<CustomField>
    <fullName>OraclePartySiteID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OraclePartySiteID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>