MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/OracleSiteUseID__c.field-meta.xml
<CustomField>
    <fullName>OracleSiteUseID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OracleSiteUseID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>