MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/OracleSyncError__c.field-meta.xml
<CustomField>
    <fullName>OracleSyncError__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OracleSyncError</label>
    <type>TextArea</type>
</CustomField>