MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Outstanding_Commission__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Commission__c</fullName>
    <formula>Total_Commission_Based_On_Unit_Sold__c -  Paid_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>