MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Override_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Override_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the override buyer if Modon Egypt team needs to use override buyer in generated documents</description>
    <label>Override Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders (Override Buyer)</relationshipLabel>
    <relationshipName>Sales_Orders_Override_Buyers</relationshipName>
    <type>Lookup</type>
</CustomField>