MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/OwnerManager_Egypt__c.field-meta.xml
<CustomField>
    <fullName>OwnerManager_Egypt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Teams_SalesOrders</relationshipName>
    <type>Lookup</type>
</CustomField>