MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Parent_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>