MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/PassportNoofPurchasersRepresentative__c.field-meta.xml
<CustomField>
    <fullName>PassportNoofPurchasersRepresentative__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport No of Purchasers Representative</label>
    <length>15</length>
    <type>Text</type>
</CustomField>