MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Payment_Reminder_Instalment_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reminder_Instalment_Number__c</fullName>
    <label>Payment Reminder Instalment Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Second Instalment Reminder</fullName>
            </value>
            <value>
                <fullName>Third Instalment Reminder</fullName>
            </value>
            <value>
                <fullName>Fourth Instalment Reminder</fullName>
            </value>
            <value>
                <fullName>Fifth Instalment Reminder</fullName>
            </value>
            <value>
                <fullName>Sixth Instalment Reminder</fullName>
            </value>
            <value>
                <fullName>Seventh Instalment Reminder</fullName>
            </value>
            <value>
                <fullName>Eight Instalment Reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>