MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Payment_Reminder_Original_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reminder_Original_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Reminder Original Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>