MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Payment_Status_10__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status_10__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Status 10</label>
    <length>18</length>
    <type>Text</type>
</CustomField>