MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Payment_Status_2__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Status 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>