MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/PaymentPlan__c.field-meta.xml
<CustomField>
    <fullName>PaymentPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <referenceTo>PaymentPlan__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>