MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/PDC_Collected__c.field-meta.xml
<CustomField>
    <fullName>PDC_Collected__c</fullName>
    <defaultValue>&apos;No&apos;</defaultValue>
    <label>PDC Collected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Non-Resident</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>