MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/PDC_Extended_SLA__c.field-meta.xml
<CustomField>
    <fullName>PDC_Extended_SLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PDC Extended SLA</label>
    <type>DateTime</type>
</CustomField>