MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/PDC_SLA_Comments__c.field-meta.xml
<CustomField>
    <fullName>PDC_SLA_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PDC SLA Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>