MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/PDCSLAExtensionApproved__c.field-meta.xml
<CustomField>
    <fullName>PDCSLAExtensionApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDCSLAExtensionApproved</label>
    <type>Checkbox</type>
</CustomField>