MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Pending_ADM_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_ADM_Amount__c</fullName>
    <formula>ADM_Fees_Dari_charges__c -  Collected_ADM_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Including Discounted ADM Amount</inlineHelpText>
    <label>Pending ADM + Dari Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>