MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Pending_DP_ADM_For_SPA_Send_to_Modon__c.field-meta.xml
<CustomField>
    <fullName>Pending_DP_ADM_For_SPA_Send_to_Modon__c</fullName>
    <formula>Pending_Down_Payment__c &lt;= 2000  || Pending_ADM_Amount__c &lt; 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending DP ADM For SPA Send to Modon</label>
    <type>Checkbox</type>
</CustomField>