MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Phase_Unit_Image__c.field-meta.xml
<CustomField>
    <fullName>Phase_Unit_Image__c</fullName>
    <formula>If(Unit__r.Unit_Image_Id__c!=null,Unit__r.Unit_Image_Id__c,Unit__r.Phase__r.unit_Image_Id__c)</formula>
    <label>Phase Unit Image</label>
    <type>Text</type>
</CustomField>