MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Plot_No__c.field-meta.xml
<CustomField>
    <fullName>Plot_No__c</fullName>
    <formula>Unit__r.PlotNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plot No</label>
    <type>Text</type>
</CustomField>