MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/POAAuthorizationDate__c.field-meta.xml
<CustomField>
    <fullName>POAAuthorizationDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA  Authorization Date</label>
    <type>Date</type>
</CustomField>