MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/POAAuthorizationExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>POAAuthorizationExpiryDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA  Authorization Expiry Date</label>
    <type>Date</type>
</CustomField>