MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/POAAuthorizationNo__c.field-meta.xml
<CustomField>
    <fullName>POAAuthorizationNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Authorization No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>