MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Primary_Contact_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Nationality__c</fullName>
    <formula>TEXT(PrimaryContact__r.Nationality__c)</formula>
    <label>Primary Contact Nationality</label>
    <type>Text</type>
</CustomField>