MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Primary_Contact_Residence_Status__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Residence_Status__c</fullName>
    <formula>TEXT(PrimaryContact__r.UAE_Resident_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Residence Status</label>
    <type>Text</type>
</CustomField>