MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Primary_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Title__c</fullName>
    <formula>TEXT(PrimaryContact__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Title</label>
    <type>Text</type>
</CustomField>