MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/PrimaryOwnerPercentage__c.field-meta.xml
<CustomField>
    <fullName>PrimaryOwnerPercentage__c</fullName>
    <formula>1 -  (JO1_Ownership__c +JO2_Ownership__c +JO3_Ownership__c+JO4_Ownership__c+ JO5_Ownership__c + JO6_Ownership__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Owner Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>