MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ProjectNameArabic__c.field-meta.xml
<CustomField>
    <fullName>ProjectNameArabic__c</fullName>
    <formula>Unit__r.Phase__r.Project__r.ProjectNameArabic__c</formula>
    <label>Project Name Arabic</label>
    <type>Text</type>
</CustomField>