MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Q_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Q_Booking_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Q Booking Date</label>
    <type>Date</type>
</CustomField>