MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit Swap</fullName>
            </value>
            <value>
                <fullName>Unit Upgrade</fullName>
            </value>
            <value>
                <fullName>Unit Downgrade</fullName>
            </value>
            <value>
                <fullName>Unit Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>