MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ReceivedADMFees__c.field-meta.xml
<CustomField>
    <fullName>ReceivedADMFees__c</fullName>
    <label>Received ADM Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>