MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ReceivedAmount__c.field-meta.xml
<CustomField>
    <fullName>ReceivedAmount__c</fullName>
    <formula>Totalpaidamount__c / TotalAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Amount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>