MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ReceivedDariAmount__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDariAmount__c</fullName>
    <label>Received Dari Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>