MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ReceivedDP__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDP__c</fullName>
    <label>Received DP %</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>