MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Referral_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Approval_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Approval Date</label>
    <type>DateTime</type>
</CustomField>