MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount__c</fullName>
    <label>Remaining Amount</label>
    <summarizedField>SalesOrderInstallments__c.InstallmentAmount__c</summarizedField>
    <summaryFilterItems>
        <field>SalesOrderInstallments__c.PaymentStatus__c</field>
        <operation>equals</operation>
        <value>Not Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>SalesOrderInstallments__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>