MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ReminderCount__c.field-meta.xml
<CustomField>
    <fullName>ReminderCount__c</fullName>
    <label>Reminder Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>