MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Reminders_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminders_Sent__c</fullName>
    <label>Reminders Sent</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAY_4</fullName>
            </value>
            <value>
                <fullName>DAY_7</fullName>
            </value>
            <value>
                <fullName>DAY_10</fullName>
            </value>
            <value>
                <fullName>DAY_13</fullName>
            </value>
            <value>
                <fullName>DAY_16</fullName>
            </value>
            <value>
                <fullName>DAY_20</fullName>
            </value>
            <value>
                <fullName>DAY_21</fullName>
            </value>
            <value>
                <fullName>FEE_DAY_2</fullName>
            </value>
            <value>
                <fullName>FEE_DAY_3</fullName>
            </value>
            <value>
                <fullName>FEE_DAY_4</fullName>
            </value>
            <value>
                <fullName>FEE_DAY_5</fullName>
            </value>
            <value>
                <fullName>FEE_DAY_6</fullName>
            </value>
            <value>
                <fullName>FEE_DAY_7</fullName>
            </value>
            <value>
                <fullName>BankTransfer_DP_3</fullName>
            </value>
            <value>
                <fullName>BankTransfer_DP_7</fullName>
            </value>
            <value>
                <fullName>BankTransfer_ADM_3</fullName>
            </value>
            <value>
                <fullName>BankTransfer_ADM_7</fullName>
            </value>
            <value>
                <fullName>RECEIPT_APPROVAL_DP_RESIDENT_D3</fullName>
            </value>
            <value>
                <fullName>RECEIPT_APPROVAL_DP_NONRESIDENT_D7</fullName>
            </value>
            <value>
                <fullName>RECEIPT_APPROVAL_ADM_RESIDENT_D3</fullName>
            </value>
            <value>
                <fullName>RECEIPT_APPROVAL_ADM_NONRESIDENT_D7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>