MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/RepresentationType__c.field-meta.xml
<CustomField>
    <fullName>RepresentationType__c</fullName>
    <label>Representation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Father وكالة قانونية</fullName>
            </value>
            <value>
                <fullName>Guardian وصي</fullName>
            </value>
            <value>
                <fullName>POA ولي</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>