MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/RepresentativeName__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Representative Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>