MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Resale__c.field-meta.xml
<CustomField>
    <fullName>Resale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resale</label>
    <type>Checkbox</type>
</CustomField>