MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Resale_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Resale_Transfer_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resale Transfer Date</label>
    <type>Date</type>
</CustomField>