MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ReservationFee__c.field-meta.xml
<CustomField>
    <fullName>ReservationFee__c</fullName>
    <formula>CASE(PaymentPlan__r.Name,
&quot;Mayar - 100&quot;, TotalAmount__c * 1,
&quot;Mayar - 80/20&quot;, TotalAmount__c * (20/100),
&quot;Thoraya - 80/20&quot;, TotalAmount__c * (20/100),
&quot;Thoraya - 100&quot;, TotalAmount__c * 1,
&quot;Muheira Payment plan&quot;, TotalAmount__c * 0.05,
&quot;Wadeem 50-50&quot;, TotalAmount__c * 0.10,
TotalAmount__c * (10/100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reservation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>