MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ReservationForm__c.field-meta.xml
<CustomField>
    <fullName>ReservationForm__c</fullName>
    <formula>if(INCLUDES(SignedDocuments__c, &apos;Reservation Form&apos;), &apos;Signed&apos;, &apos;Unsigned&apos;)</formula>
    <label>Reservation Form</label>
    <type>Text</type>
</CustomField>