MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Reservationsentdate__c.field-meta.xml
<CustomField>
    <fullName>Reservationsentdate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reservation sent date</label>
    <type>Date</type>
</CustomField>